fix: Adjust colors to meet contrast accessibility ratios

--- a/css/styles.css
+++ b/css/styles.css
@@ -100,7 +100,7 @@ video {
   width: 100%;
   min-width: 320px;
   background-color: #444;
-  color: #aaa;
+  color: #b3b3b3;
   font-size: 8pt;
   letter-spacing: 1px;
   padding: 25px 0;
@@ -153,13 +153,13 @@ nav h1 a {
 
 /* Add a color to all links inside the list */
 #breadcrumb li a {
-    color: #0275d8;
+    color: #2970a0;
     text-decoration: none;
 }
 
 /* Add a color on mouse-over */
 #breadcrumb li a:hover {
-    color: #01447e;
+    color: #013a6b;
     text-decoration: underline;
 }
 
@@ -182,7 +182,7 @@ nav h1 a {
   width: 100%;
   padding: 25px 0px;
   text-align: center;
-  background-color: #3397DB;
+  background-color: #2b7bb1;
 }
 
 .filter-options h2 {
@@ -241,7 +241,7 @@ nav h1 a {
 }
 
 #restaurants-list li h1 {
-  color: #f18200;
+  color: #a55902;
   font-weight: 200;
   letter-spacing: 0;
   line-height: 1.35rem;
@@ -255,7 +255,7 @@ nav h1 a {
 }
 
 #restaurants-list li a {
-  background-color: orange;
+  background-color: #a55902;
   color: #fff;
   display: inline-block;
   margin: 30px 0;
@@ -284,7 +284,7 @@ nav h1 a {
 }
 
 #restaurant-name {
-  color: #f18200;
+  color: #a55902;
   font-weight: 200;
   letter-spacing: 0;
   margin: 20px 0;
